feat: added to ci, echo of current date

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,3 +24,8 @@ jobs:
 
       - name: Run ESLint
         run: npm run lint
+
+      - name: Print current date
+        run: |
+          echo "Сьогоднішня дата: $(date)"
+          echo "Дата виведена успішно!"
